Updated API schema
