# api/swagger_server/controllers/admins_controller.py
@@ -2,16 +2,17 @@ import connexion
 import six
 
 from swagger_server.models.item import Item  # noqa: E501
-from swagger_server.models.location import Location  # noqa: E501
+from swagger_server.models.reservation_update import ReservationUpdate  # noqa: E501
+from swagger_server.models.warehouse import Warehouse  # noqa: E501
 from swagger_server import util
 
 
-def add_item(body=None):  # noqa: E501
-    """adds an inventory item
+def create_item(body):  # noqa: E501
+    """Create new item
 
-    Adds an item to the system # noqa: E501
+     # noqa: E501
 
-    :param body: InventoryItem to add
+    :param body: Item to add
     :type body: dict | bytes
 
     :rtype: None
@@ -21,54 +22,74 @@ def add_item(body=None):  # noqa: E501
     return 'do some magic!'
 
 
-def add_location(body=None):  # noqa: E501
-    """add a location
+def create_warehouse(body):  # noqa: E501
+    """Create new warehouse
 
      # noqa: E501
 
-    :param body: 
+    :param body: Warehouse to add
     :type body: dict | bytes
 
     :rtype: None
     """
     if connexion.request.is_json:
-        body = Location.from_dict(connexion.request.get_json())  # noqa: E501
-        print(body)
+        body = Warehouse.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
 
 
-def delete_item_by_id(id):  # noqa: E501
-    """delete an item
+def delete_item(item_id):  # noqa: E501
+    """Delete item
 
      # noqa: E501
 
-    :param id: 
-    :type id: str
+    :param item_id: 
+    :type item_id: str
 
     :rtype: None
     """
     return 'do some magic!'
 
 
-def get_location():  # noqa: E501
-    """searches locations
-
-    By passing in the appropriate options, you can search for locations in the system  # noqa: E501
-
-
-    :rtype: None
-    """
-    return 'do some magic!'
-
-
-def update_item_by_id(id):  # noqa: E501
-    """update an item
+def get_warehouse_info():  # noqa: E501
+    """Get warehouse info
 
      # noqa: E501
 
-    :param id: 
-    :type id: str
 
     :rtype: None
     """
+    return 'do some magic!'
+
+
+def update_item(body, item_id):  # noqa: E501
+    """Update item
+
+     # noqa: E501
+
+    :param body: Item update payload
+    :type body: dict | bytes
+    :param item_id: 
+    :type item_id: str
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = Item.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def update_reservation(body, reservation_id):  # noqa: E501
+    """Confirm or alter reservation (including changing to purchased)
+
+     # noqa: E501
+
+    :param body: Reservation update details
+    :type body: dict | bytes
+    :param reservation_id: 
+    :type reservation_id: str
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = ReservationUpdate.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
