# api/swagger_server/controllers/users_controller.py
@@ -2,29 +2,33 @@ import connexion
 import six
 
 from swagger_server.models.item import Item  # noqa: E501
+from swagger_server.models.purchase_request import PurchaseRequest  # noqa: E501
+from swagger_server.models.reservation_request import ReservationRequest  # noqa: E501
 from swagger_server import util
 
 
-def buy_item(id):  # noqa: E501
-    """buy an inventory item
+def get_item_stock_all_locations(item_id):  # noqa: E501
+    """Get stock of specific item for all locations
 
-    Buy an item # noqa: E501
+     # noqa: E501
 
-    :param id: 
-    :type id: str
+    :param item_id: 
+    :type item_id: str
 
     :rtype: None
     """
     return 'do some magic!'
 
 
-def get_item_by_id(id):  # noqa: E501
-    """get item by id
+def get_item_stock_specific_location(item_id, location_id):  # noqa: E501
+    """Get stock of specific item for specific location
 
      # noqa: E501
 
-    :param id: 
-    :type id: str
+    :param item_id: 
+    :type item_id: str
+    :param location_id: 
+    :type location_id: str
 
     :rtype: None
     """
@@ -32,17 +36,64 @@ def get_item_by_id(id):  # noqa: E501
 
 
 def get_items(search_string=None, skip=None, limit=None):  # noqa: E501
-    """searches items
+    """Get list of all items
 
-    By passing in the appropriate options, you can search for available inventory in the system  # noqa: E501
+     # noqa: E501
 
-    :param search_string: pass an optional search string for looking up inventory
+    :param search_string: Optional search string for filtering inventory
     :type search_string: str
-    :param skip: number of records to skip for pagination
+    :param skip: Number of records to skip for pagination
     :type skip: int
-    :param limit: maximum number of records to return
+    :param limit: Maximum number of records to return
     :type limit: int
 
     :rtype: List[Item]
+    """
+    return 'do some magic!'
+
+
+def purchase_item(body, item_id):  # noqa: E501
+    """Purchase an item
+
+     # noqa: E501
+
+    :param body: Purchase request with header-tied details
+    :type body: dict | bytes
+    :param item_id: 
+    :type item_id: str
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = PurchaseRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def reserve_item(body, item_id):  # noqa: E501
+    """Reserve item
+
+     # noqa: E501
+
+    :param body: Reservation details for the item
+    :type body: dict | bytes
+    :param item_id: 
+    :type item_id: str
+
+    :rtype: None
+    """
+    if connexion.request.is_json:
+        body = ReservationRequest.from_dict(connexion.request.get_json())  # noqa: E501
+    return 'do some magic!'
+
+
+def view_item_reservation(item_id):  # noqa: E501
+    """View reservation for an item
+
+     # noqa: E501
+
+    :param item_id: 
+    :type item_id: str
+
+    :rtype: None
     """
     return 'do some magic!'
